<resources>
    <string name="app_name">爱扽防伪</string>
    <string name="hello_world">Hello world!</string>
    <string name="ident_about">爱扽介绍</string>
    <string name="ident_partner">合作商家</string>
    <string name="ident_verify">认证入口</string>
    <string name="ident_news">行业新闻</string>
    <string name="ident_manual">操作手册</string>
    <string name="title_capture">扫一扫</string>
    <string name="str_capture_camera_pos_tips">请将手机镜头对准二维码/条形码</string>

    <!-- it for zxing.client -->
    <string name="preferences_actions_title">扫描成功</string>
    <string name="preferences_auto_focus_title">自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">一维码：工业</string>
    <string name="preferences_decode_1D_product_title">一维码：商品</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
    <string name="preferences_decode_QR_title">二维码</string>
    <string name="preferences_device_bug_workarounds_title">设备适配</string>
    <string name="preferences_disable_barcode_scene_mode_title">不进行条形码场景匹配</string>
    <string name="preferences_disable_continuous_focus_summary">使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">不持续对焦</string>
    <string name="preferences_disable_exposure_title">不曝光</string>
    <string name="preferences_disable_metering_title">不使用距离测量</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">关</string>
    <string name="preferences_front_light_on">开</string>
    <string name="preferences_front_light_summary">设置闪光灯模式</string>
    <string name="preferences_front_light_title">闪光灯</string>
    <string name="preferences_general_title">扫描设置</string>
    <string name="preferences_history_summary">自动将条码存入历史记录</string>
    <string name="preferences_history_title">存入历史记录</string>
    <string name="preferences_invert_scan_summary">扫描黑色背景上的白色条码。仅适用于部分设备。</string>
    <string name="preferences_invert_scan_title">反色</string>
    <string name="preferences_name">选项</string>
    <string name="preferences_orientation_title">不自动旋转</string>
    <string name="preferences_play_beep_title">播放提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复的记录</string>
    <string name="preferences_remember_duplicates_title">保存重复记录</string>
    <string name="preferences_result_title">搜索设置</string>
    <string name="preferences_scanning_title">条码类型</string>
    <string name="preferences_search_country">搜索引擎国别</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="wechat_subscription">微信公众号</string>
    <string name="enterprise_qq_group">企业QQ群</string>
    <string name="company_website">公司官网</string>
    <string name="company_intro">公司简介</string>
    <string name="technical_support">技术支持</string>
    <string name="contact_information">联系方式</string>
    <string name="look_more_info">查看更多详情</string>
    <string name="just_share">立即分享</string>
    <string name="industry_news">行业新闻</string>
    <string name="more">更多</string>
    <string name="expertise">操作说明</string>
    <string name="real_name_report">实名举报</string>
    <string name="input_name">请输入您的姓名</string>
    <string name="input_contact_info">请输入您的联系方式</string>
    <string name="just_report">马上举报</string>
    <string name="notice_to_report">举报须知</string>
    <string name="verify_tip">靠近商品  扽扽真假</string>
    <string name="verify_use_tip">将手机置于标签或证书上</string>
    <string name="next_verify">继续下一步验证</string>
    <string name="verify_double_tip">该商品属于双标签酒类\\n请将手机靠近鉴定证书左页下方“扽”字处</string>
    <string name="use_alert">操作提示</string>
    <string name="slide_right_more">查看更多步骤请向右滑动</string>
    <string name="close">关闭</string>
    <string name="verify_reminder_report">亲爱的扽友.爱扽提醒您，您目前扽的商品可能是假货，建议您立即举报。</string>
    <string name="pass">放TA一马</string>
    <string name="just_report_2">立即举报</string>
    <string name="str_share_text">想买正牌商品吗？用手机先扽一下！http://m.ident.cn</string>
    <string name="str_result_true_share_btn">我要分享 </string>
    <string name="str_result_true_share_to">分享到 </string>

    <string name="app_updater_download_later">暂不更新</string>
    <string name="app_updater_download_now">下载安装</string>
    <string name="app_updater_app_market">应用市场</string>
    <string name="app_updater_downloading">正在下载…</string>
    <string name="app_updater_download_failed">下载失败：%d</string>
    <string name="app_updater_dir_not_found">找不到下载目录 - %s</string>
    <string name="app_updater_install">安装</string>
    <string name="app_updater_retry">重试下载</string>
</resources>
