<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.ident.validator.common.views.CustomToolbar style="@style/custom_toolbar_style" />

    <ImageView
        style="@style/divider_style"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/wechat_subscription"
                android:textColor="#464646"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:text="JHU986675"
                android:textColor="#969696"
                android:textSize="14sp" />
        </RelativeLayout>

        <ImageView style="@style/divider_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/enterprise_qq_group"
                android:textColor="#464646"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:text="7655433222"
                android:textColor="#969696"
                android:textSize="14sp" />
        </RelativeLayout>

        <ImageView style="@style/divider_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/company_website"
                android:textColor="#464646"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:text="www.ident.com"
                android:textColor="@color/color_blue"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView style="@style/divider_style" />

    <ImageView
        style="@style/divider_style"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/company_intro_item"
            style="@style/company_item_style"
            android:text="@string/company_intro" />

        <ImageView style="@style/divider_style" />

        <TextView
            android:id="@+id/company_tenchnical_item"
            style="@style/company_item_style"
            android:text="@string/technical_support" />

        <ImageView style="@style/divider_style" />

        <TextView
            style="@style/company_item_style"
            android:text="@string/contact_information" />
    </LinearLayout>

    <ImageView style="@style/divider_style" />

</LinearLayout>