<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp" >

    <LinearLayout
        android:id="@+id/content_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/white_circle_10_shape"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal|left"
            android:text="@string/verify_reminder_report"
            android:textColor="#646464"
            android:textSize="14sp" />

        <ImageView style="@style/divider_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dialog_left_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_left_btn_shape"
                android:gravity="center"
                android:text="@string/pass"
                android:textColor="#323232"
                android:textSize="14sp" />

            <ImageView
                style="@style/divider_style"
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/dialog_right_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_right_btn_shape"
                android:gravity="center"
                android:text="@string/just_report_2"
                android:textColor="#63a7ef"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@id/content_ly"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-30dp"
        android:src="@mipmap/ic_big_report" />

</RelativeLayout>