<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />

    <ProgressBar
        android:id="@+id/pb_update"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progressbar_color"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/progress_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@id/pb_update"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="已下载0%" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/ok"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/progress_txt"
        android:text="@string/app_updater_download_now" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/cancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ok"
        android:layout_alignBottom="@+id/ok"
        android:layout_toLeftOf="@+id/ok"
        android:layout_toStartOf="@+id/ok"
        android:text="@string/app_updater_download_later" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/market"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_txt"
        android:layout_toLeftOf="@id/cancel"
        android:layout_toStartOf="@id/cancel"
        android:visibility="gone"
        android:text="@string/app_updater_app_market" />

</RelativeLayout>