<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/white_circle_10_shape"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/use_alert"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:minHeight="44dp"
        android:text="@string/slide_right_more"
        android:textColor="#646464"
        android:textSize="14sp" />

    <ImageView
        style="@style/divider_style"
        android:layout_marginTop="14dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dialog_bottom_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/dialog_iphone_style_btn_shape"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/color_blue"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/bottom_second_ly"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:visibility="gone"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dialog_left_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_left_btn_shape"
                android:gravity="center"
                android:text="忽略"
                android:textColor="#323232"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/mDivider"
                style="@style/divider_style"
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/dialog_right_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_right_btn_shape"
                android:gravity="center"
                android:text="继续验证"
                android:textColor="#63a7ef"
                android:textSize="14sp" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>