<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.ident.validator.common.views.CustomToolbar style="@style/custom_toolbar_style" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                style="@style/divider_style"
                android:layout_marginTop="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@mipmap/ic_report_warning"
                        android:drawablePadding="5dp"
                        android:text="@string/real_name_report"
                        android:textColor="#707070"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/mCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:button="@drawable/switch_box_selector"
                        android:checked="true" />
                </RelativeLayout>

                <ImageView style="@style/divider_style" />

                <LinearLayout
                    android:id="@+id/input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible" >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginLeft="30dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/input_name"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textColorHint="#bababa"
                        android:textSize="14sp" />

                    <ImageView
                        style="@style/divider_style"
                        android:layout_marginLeft="30dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginLeft="30dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/input_contact_info"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textColorHint="#bababa"
                        android:textSize="14sp" />

                    <ImageView
                        style="@style/divider_style"
                        android:layout_marginLeft="30dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/just_report_btn"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginBottom="66dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="79dp"
                    android:background="@color/color_blue"
                    android:gravity="center"
                    android:text="@string/just_report"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ImageView style="@style/divider_style" />

            <ImageView
                style="@style/divider_style"
                android:layout_marginTop="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="14dp"
                    android:drawableLeft="@mipmap/ic_report_tip"
                    android:drawablePadding="5dp"
                    android:text="@string/notice_to_report"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    style="@style/divider_style"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:gravity="top|left"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容这里是举报协议相关内容"
                    android:textColor="#696969"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>